[FEAT] 청첩장 조회시 location 추가